# Tank_war_pygame

./: .gitignore  README.md  main.py  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/drafts/: tank-battle-game.md
.sisyphus/notepads/tank-battle-game/: completion-report.md  learnings.md
.sisyphus/plans/: tank-battle-game.md
docs/plans/: 2026-03-09-slow-zone-design.md  2026-03-09-slow-zone.md
src/: __init__.py  bullet.py  enemy.py  game.py  map.py  tank.py
